tests/snapshots/integration__integration_tests__switch__switch_default_branch_missing_worktree.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ [32m[32mSwitched to worktree for [1mmain[22m at [1m[REPO].main[39m[22m[39m
💡 [2m[2mRun `wt config shell install` to enable automatic cd[22m[22m
